--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,16 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Virtual environments
+venv/
+.venv/
+
+# Environment variables
+.env
+
+# Streamlit config
+.streamlit/
+
+# OS files
+.DS_Store
